# PEPO_antigo

./: .gitignore  .gitmodules  Instalacao Nano  README.md  driver_wifi.sh  lancar_no_camera_inicio.sh
Panoramic_and_Dome/: ProjetoGrin.pro  ProjetoGrin.pro.user.0fbf300  ProjetoGrin.pro.user.be3d197  importar.cpp  main.cpp  main.hpp
acc_obj/: CMakeLists.txt  package.xml
acc_obj/launch/: acc_cloud.launch  acc_obj.launch  acc_obj_online.launch  acc_space.launch  planta_baixa.launch
acc_obj/resources/: obj_pronto.rviz  rviz.rviz
acc_obj/src/: acc_cloud.cpp  acc_obj.cpp  acc_obj_online.cpp  acc_obj_pronto.cpp  acc_space2.cpp  planta_baixa.cpp
acc_obj/srv/: comandoAquisitar.srv
accumulate_point_cloud/: CMakeLists.txt  accumulate.cpp  package.xml
build-ProjetoGrin-Desktop-Debug/: Makefile  ProjetoGrin
build-ProjetoGrin-Desktop_Qt_5_9_8_GCC_64bit-Debug/: Makefile  ProjetoGrin
calib/: camera_usb_logitech.yaml
clusters/: CMakeLists.txt  package.xml
clusters/launch/: clusters.launch
clusters/src/: otimiza_bat.cpp  processa_imagens.cpp  separar_clusters.cpp
communication/: CMakeLists.txt  compile_msgs.sh  package.xml
communication/launch/: envia_dados_zmq.launch  recebe_dados_zmq.launch
communication/msgs/: arquivos.pb.cc  arquivos.pb.h  imagem.pb.cc  imagem.pb.h  nuvem.pb.cc  nuvem.pb.h  nvm.pb.cc  nvm.pb.h
communication/protos/: arquivos.proto  imagem.proto  nuvem.proto  nvm.proto
communication/src/: envia_dados_zmq.cpp  recebe_dados_zmq.cpp
cv_camera/src/: driver.cpp
dynamixel-workbench/dynamixel_workbench_controllers/include/dynamixel_workbench_controllers/: multi_port.h
dynamixel-workbench/dynamixel_workbench_controllers/launch/: multi_port.launch
dynamixel-workbench/dynamixel_workbench_controllers/src/: multi_port.cpp
fog/: CMakeLists.txt  package.xml
fog/launch/: acc_obj_pronto.launch  acc_space.launch  planta_baixa.launch
fog/src/: acc_space2.cpp  planta_baixa.cpp
laser_camera/: CMakeLists.txt  package.xml
laser_camera/launch/: lancar_sistema.launch  otimizar_nuvem.launch
laser_camera/resources/: aquisicao.rviz
laser_camera/src/: otimiza_bat.cpp  otimiza_bat.cpp.autosave  otimiza_manual.cpp  otimizar_nuvem.cpp  processa_imagens.cpp  processar.cpp  processar.cpp.autosave  processar_online.cpp  scanner_aquisicao.cpp  separar_clusters.cpp
libraries/include/: clusters.h  otimizaimagens.h  processcloud.h  processcloud.h.autosave  registerobjectoptm.h
libraries/src/: clusters.cpp  otimizaimagens.cpp  processcloud.cpp  processcloud.cpp.autosave  registerobjectoptm.cpp  registerobjectoptm.cpp.autosave
livox_ros_driver/config/: display_lidar_points.rviz
livox_ros_driver/launch/: livox_lidar.launch
panoramica_esfera/: CMakeLists.txt  package.xml
panoramica_esfera/launch/: projeta_esfera.launch
panoramica_esfera/src/: projeta_esfera.cpp  projeta_esfera2.cpp
programinha/: CMakeLists.txt  mainpage.dox  package.xml
programinha/include/programinha/: main_window.hpp  qnode.hpp
programinha/launch/: lancar_programa.launch
programinha/msgs/: arquivos.pb.cc  arquivos.pb.h  imagem.pb.cc  imagem.pb.h  nuvem.pb.cc  nuvem.pb.h  nvm.pb.cc  nvm.pb.h
programinha/resources/: visual.rviz  visual_obj.rviz
programinha/src/: main.cpp  main_window.cpp  qnode.cpp
programinha/ui/: main_window.ui
servos60kg/: CMakeLists.txt  package.xml
servos60kg/scripts/: controle_servos.py  inicio_led_servos.py
servos60kg/src/: dumb_node.cpp
servos60kg/srv/: LED.srv  position.srv
usb_cam/launch/: usb_cam.launch
usb_cam/nodes/: usb_cam_node.cpp
usb_cam/src/: usb_cam.cpp
zmq_ros/: CMakeLists.txt  package.xml
zmq_ros/launch/: recebe_dados_zmq.launch
zmq_ros/msgs/: arquivos.pb.h  imagem.pb.h  nuvem.pb.cc
zmq_ros/protos/: arquivos.proto  nuvem.proto
zmq_ros/src/: recebe_dados_zmq.cpp  recebe_imagem.cpp  recebe_nuvem.cpp
