<?xml version="1.0"?>
<package format="2">
  <name>laser_camera</name>
  <version>0.1.0</version>
  <description>The laser_camera package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="grin@todo.todo">grin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp sensor_msgs laser_geometry nav_msgs cv_bridge pcl_ros image_transport tf tf2_ros tf_conversions image_geometry camera_calibration_parsers camera_info_manager</build_depend>
  <build_export_depend>roscpp sensor_msgs laser_geometry nav_msgs cv_bridge pcl_ros image_transport tf tf2_ros tf_conversions image_geometry camera_calibration_parsers camera_info_manager</build_export_depend>
  <exec_depend>roscpp sensor_msgs laser_msgs nav_msgs cv_bridge pcl_ros image_transport tf tf2_ros tf_conversions image_geometry camera_calibration_parsers camera_info_manager</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
